# ralphctl

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  FINDINGS.md  IMPLEMENTATION_PLAN.md  INVESTIGATION.md  PROMPT.md  QUESTION.md  README.md  SPEC.md  justfile
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: CLAUDE.md  README.md  docusaurus.config.ts
docs/docs/: intro.md
docs/docs/philosophy/: _category_.json  future-improvements.md  how-ralphctl-implements-it.md  the-philosophy.md
src/: cli.rs  error.rs  files.rs  main.rs  parser.rs  reverse.rs  run.rs  templates.rs
templates/: IMPLEMENTATION_PLAN.md  PROMPT.md  REVERSE_PROMPT.md  SPEC.md
tests/: archive.rs  clean.rs  fetch_latest_prompt.rs  init.rs  reverse.rs  run.rs
